Altered time proceswsing script

--- a/time_processing.ipynb
+++ b/time_processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1932,18 +1932,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "for i in range(877833):\n",
     "    if pd.isna(df[\"Activity\"][i]):\n",
-    "        df.at[i,'Activity'] == \"UNCONFIRMED\""
+    "        df.at[i,'Activity'] = \"UNCONFIRMED\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1959,22 +1959,234 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Unnamed: 0.1</th>\n",
+       "      <th>Bug ID</th>\n",
+       "      <th>Product</th>\n",
+       "      <th>Component</th>\n",
+       "      <th>Status</th>\n",
+       "      <th>Resolution</th>\n",
+       "      <th>Summary</th>\n",
+       "      <th>Changed</th>\n",
+       "      <th>Assignee</th>\n",
+       "      <th>...</th>\n",
+       "      <th>OS</th>\n",
+       "      <th>Personal Tags</th>\n",
+       "      <th>Priority</th>\n",
+       "      <th>Reporter</th>\n",
+       "      <th>Severity</th>\n",
+       "      <th>Target Milestone</th>\n",
+       "      <th>Version</th>\n",
+       "      <th>Votes</th>\n",
+       "      <th>Activity</th>\n",
+       "      <th>Total Time Open (in days)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>877828</th>\n",
+       "      <td>877828</td>\n",
+       "      <td>877828</td>\n",
+       "      <td>534250.0</td>\n",
+       "      <td>EMFCompare</td>\n",
+       "      <td>Core</td>\n",
+       "      <td>NEW</td>\n",
+       "      <td>---</td>\n",
+       "      <td>EMF Compare may not needs to handle Ecore XMI ...</td>\n",
+       "      <td>2018-05-02 05:34:56</td>\n",
+       "      <td>emf.compare-inbox</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Windows 7</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>P3</td>\n",
+       "      <td>arthur.daussy</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>---</td>\n",
+       "      <td>3.3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>UNCONFIRMED</td>\n",
+       "      <td>0.004271</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>877829</th>\n",
+       "      <td>877829</td>\n",
+       "      <td>877829</td>\n",
+       "      <td>539378.0</td>\n",
+       "      <td>EMFCompare</td>\n",
+       "      <td>Core</td>\n",
+       "      <td>NEW</td>\n",
+       "      <td>---</td>\n",
+       "      <td>Allow intramodel merge in XMI</td>\n",
+       "      <td>2018-09-24 08:14:29</td>\n",
+       "      <td>emf.compare-inbox</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Windows 7</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>P3</td>\n",
+       "      <td>william.piers</td>\n",
+       "      <td>enhancement</td>\n",
+       "      <td>---</td>\n",
+       "      <td>unspecified</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>UNCONFIRMED</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>877830</th>\n",
+       "      <td>877830</td>\n",
+       "      <td>877830</td>\n",
+       "      <td>542079.0</td>\n",
+       "      <td>EMFCompare</td>\n",
+       "      <td>Team</td>\n",
+       "      <td>NEW</td>\n",
+       "      <td>---</td>\n",
+       "      <td>Git tests failing</td>\n",
+       "      <td>2018-12-04 04:14:54</td>\n",
+       "      <td>emf.compare-inbox</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Windows 10</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>P3</td>\n",
+       "      <td>laurent.goubet</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>---</td>\n",
+       "      <td>unspecified</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>UNCONFIRMED</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>877831</th>\n",
+       "      <td>877831</td>\n",
+       "      <td>877831</td>\n",
+       "      <td>545187.0</td>\n",
+       "      <td>EMFCompare</td>\n",
+       "      <td>Core</td>\n",
+       "      <td>NEW</td>\n",
+       "      <td>---</td>\n",
+       "      <td>Insufficient support for add-add conflict reso...</td>\n",
+       "      <td>2019-03-27 07:43:48</td>\n",
+       "      <td>emf.compare-inbox</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Mac OS X</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>P3</td>\n",
+       "      <td>give.a.damus</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>---</td>\n",
+       "      <td>3.3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>UNCONFIRMED</td>\n",
+       "      <td>19.706632</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>877832</th>\n",
+       "      <td>877832</td>\n",
+       "      <td>877832</td>\n",
+       "      <td>547546.0</td>\n",
+       "      <td>EMFCompare</td>\n",
+       "      <td>UI</td>\n",
+       "      <td>NEW</td>\n",
+       "      <td>---</td>\n",
+       "      <td>Saving when the properties CMV is displayed do...</td>\n",
+       "      <td>2019-05-22 05:14:37</td>\n",
+       "      <td>emf.compare-inbox</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Windows 10</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>P3</td>\n",
+       "      <td>laurent.goubet</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>---</td>\n",
+       "      <td>unspecified</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>UNCONFIRMED</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 28 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "0.004143518518518519"
+       "        Unnamed: 0  Unnamed: 0.1    Bug ID     Product Component Status  \\\n",
+       "877828      877828        877828  534250.0  EMFCompare      Core    NEW   \n",
+       "877829      877829        877829  539378.0  EMFCompare      Core    NEW   \n",
+       "877830      877830        877830  542079.0  EMFCompare      Team    NEW   \n",
+       "877831      877831        877831  545187.0  EMFCompare      Core    NEW   \n",
+       "877832      877832        877832  547546.0  EMFCompare        UI    NEW   \n",
+       "\n",
+       "       Resolution                                            Summary  \\\n",
+       "877828        ---  EMF Compare may not needs to handle Ecore XMI ...   \n",
+       "877829        ---                      Allow intramodel merge in XMI   \n",
+       "877830        ---                                  Git tests failing   \n",
+       "877831        ---  Insufficient support for add-add conflict reso...   \n",
+       "877832        ---  Saving when the properties CMV is displayed do...   \n",
+       "\n",
+       "                    Changed           Assignee  ...          OS Personal Tags  \\\n",
+       "877828  2018-05-02 05:34:56  emf.compare-inbox  ...   Windows 7           NaN   \n",
+       "877829  2018-09-24 08:14:29  emf.compare-inbox  ...   Windows 7           NaN   \n",
+       "877830  2018-12-04 04:14:54  emf.compare-inbox  ...  Windows 10           NaN   \n",
+       "877831  2019-03-27 07:43:48  emf.compare-inbox  ...    Mac OS X           NaN   \n",
+       "877832  2019-05-22 05:14:37  emf.compare-inbox  ...  Windows 10           NaN   \n",
+       "\n",
+       "       Priority        Reporter     Severity  Target Milestone      Version  \\\n",
+       "877828       P3   arthur.daussy       normal               ---        3.3.0   \n",
+       "877829       P3   william.piers  enhancement               ---  unspecified   \n",
+       "877830       P3  laurent.goubet       normal               ---  unspecified   \n",
+       "877831       P3    give.a.damus       normal               ---        3.3.0   \n",
+       "877832       P3  laurent.goubet       normal               ---  unspecified   \n",
+       "\n",
+       "       Votes     Activity  Total Time Open (in days)  \n",
+       "877828   0.0  UNCONFIRMED                   0.004271  \n",
+       "877829   0.0  UNCONFIRMED                   0.000000  \n",
+       "877830   0.0  UNCONFIRMED                   0.000000  \n",
+       "877831   0.0  UNCONFIRMED                  19.706632  \n",
+       "877832   0.0  UNCONFIRMED                   0.000000  \n",
+       "\n",
+       "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['Total Time Open (in days)'][1]"
+    "df.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('finalv2.csv')"
    ]
   },
   {
